Update API_URL and USE_CLOUD constant

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     <script>
         // ==================== 設定 ====================
         const API_URL = 'ここにGoogle Apps ScriptのウェブアプリURLを貼り付け'; // 要変更
-        const USE_CLOUD = API_URL !== 'ここにGoogle Apps ScriptのウェブアプリURLを貼り付け';
+        const USE_CLOUD = API_URL !== 'https://script.google.com/macros/s/AKfycby6hiBE5aU9dkmgOpT2rsDjkdoADMeh5Iv7MWPauv2wZ4u9CrToL7jQvdVqwpPQPZif2Q/exec';
 
         // ==================== データ管理 ====================
         let scores = [];
