--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
 
     <script>
         // ==================== 設定 ====================
-        const API_URL = 'ここにGoogle Apps ScriptのウェブアプリURLを貼り付け'; // 要変更
-        const USE_CLOUD = API_URL !== 'https://script.google.com/macros/s/AKfycbydnVvEPTVoYfwHiGzTTVU8WF7BaOyGUxVQ8XXvkbMZ-C5lcZcbWpb4CbkhE2eRdNoWRA/exec';
+        const API_URL = 'https://script.google.com/macros/s/AKfycbydnVvEPTVoYfwHiGzTTVU8WF7BaOyGUxVQ8XXvkbMZ-C5lcZcbWpb4CbkhE2eRdNoWRA/exec'; // 要変更
+        const USE_CLOUD = API_URL !== 'ここにGoogle Apps ScriptのウェブアプリURLを貼り付け';
 
         // ==================== データ管理 ====================
         let scores = [];
